--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "generator-yo",
-  "version": "0.0.0",
+  "name": "generator-html-wireframe",
+  "version": "0.0.1",
   "description": "Create lofi html mockups of common web layouts",
   "homepage": "",
   "author": {
@@ -18,32 +18,39 @@
     "yeoman-generator"
   ],
   "dependencies": {
-    "yeoman-generator": "^0.23.0",
-    "chalk": "^1.0.0",
-    "yosay": "^1.0.0"
+    "chalk": "^1.1.3",
+    "yeoman-generator": "^1.1.1",
+    "yosay": "^2.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-env": "^1.4.0",
-    "eslint": "^3.1.1",
+    "babel-preset-latest": "^6.24.1",
+    "eslint": "^3.19.0",
     "eslint-config-xo-space": "^0.15.0",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.1",
     "gulp-coveralls": "^0.1.0",
     "gulp-eslint": "^3.0.1",
-    "gulp-exclude-gitignore": "^1.0.0",
-    "gulp-istanbul": "^1.0.0",
+    "gulp-exclude-gitignore": "^1.1.1",
+    "gulp-istanbul": "^1.1.1",
     "gulp-line-ending-corrector": "^1.0.1",
     "gulp-mocha": "^3.0.1",
-    "gulp-nsp": "^2.1.0",
-    "gulp-plumber": "^1.0.0",
-    "yeoman-assert": "^2.0.0",
-    "yeoman-test": "^1.0.0",
-    "gulp-rename": "latest"
+    "gulp-nsp": "^2.4.2",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.6.0",
+    "yeoman-assert": "^2.2.3",
+    "yeoman-test": "^1.6.0"
   },
   "babel": {
     "presets": [
-      "env"
+      "latest"
+    ],
+    "plugins": [
+      "babel-plugin-add-module-exports"
     ]
   },
   "eslintConfig": {
