--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "files": [
     "generators"
   ],
-  "main": "generators/index.js",
+  "main": "src/app/index.js",
   "keywords": [
     "html",
     "wireframe",
@@ -24,45 +24,29 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-jest": "^19.0.0",
     "babel-preset-env": "^1.4.0",
     "babel-preset-latest": "^6.24.1",
     "eslint": "^3.19.0",
     "eslint-config-xo-space": "^0.15.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-coveralls": "^0.1.0",
-    "gulp-eslint": "^3.0.1",
-    "gulp-exclude-gitignore": "^1.1.1",
-    "gulp-istanbul": "^1.1.1",
-    "gulp-line-ending-corrector": "^1.0.1",
-    "gulp-mocha": "^3.0.1",
-    "gulp-nsp": "^2.4.2",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^2.6.0",
+    "jest-cli": "^19.0.2",
     "yeoman-assert": "^2.2.3",
     "yeoman-test": "^1.6.0"
   },
   "babel": {
     "presets": [
       "latest"
-    ],
-    "plugins": [
-      "babel-plugin-add-module-exports"
     ]
   },
   "eslintConfig": {
-    "extends": "xo-space",
-    "env": {
-      "mocha": true
-    }
+    "extends": "xo-space"
   },
   "repository": "vanbujm/generator-yo",
   "scripts": {
-    "prepublish": "gulp prepublish",
-    "test": "gulp"
+    "lint": "eslint src/**/*.es6",
+    "babel": "babel src --out-dir generators --copy-files --ignore src/app/templates/sass",
+    "test": "jest",
+    "watch": "node-sass -w src/app/templates/sass/ -o src/app/templates/css/"
   },
   "license": "MIT"
 }
