--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^3.19.0",
     "eslint-config-xo-space": "^0.15.0",
     "jest-cli": "^19.0.2",
+    "node-sass": "^4.5.2",
     "yeoman-assert": "^2.2.3",
     "yeoman-test": "^1.6.0"
   },
@@ -45,6 +46,7 @@
   "scripts": {
     "lint": "eslint src/**/*.es6",
     "babel": "babel src --out-dir generators --copy-files --ignore src/app/templates/sass",
+    "sass": "node-sass src/app/templates/sass/ -o src/app/templates/css/",
     "test": "jest",
     "watch": "node-sass -w src/app/templates/sass/ -o src/app/templates/css/"
   },
