--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-eslint": "7.2.3",
     "babel-jest": "^19.0.0",
     "babel-preset-env": "^1.4.0",
+    "babel-preset-flow": "6.23.0",
     "babel-preset-latest": "^6.24.1",
-    "eslint": "^3.19.0",
+    "eslint": "3.19.0",
+    "eslint-config-airbnb": "15.0.1",
     "eslint-config-xo-space": "^0.16.0",
+    "eslint-plugin-flowtype": "2.33.0",
+    "flow-bin": "^0.47.0",
     "jest-cli": "^19.0.2",
     "node-sass": "^4.5.2",
     "yeoman-assert": "^3.0.0",
@@ -36,15 +41,13 @@
   },
   "babel": {
     "presets": [
-      "latest"
+      "latest",
+      "flow"
     ]
-  },
-  "eslintConfig": {
-    "extends": "xo-space"
   },
   "repository": "vanbujm/generator-html-wireframe",
   "scripts": {
-    "lint": "eslint src/**/*.es6",
+    "lint": "eslint src/**/*.es6 && flow",
     "babel": "babel src --out-dir generators --copy-files",
     "sass": "node-sass src/app/templates/sass/ -o src/app/templates/css/",
     "test": "jest",
